# django-computedfields

./: pyproject.toml  setup.py
