[tool.poetry]
name = "django-computedfields"
version = "0.2.5"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
typing-extensions = "^4.9.0"
django-fast-update = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
