[tool.poetry]
name = "django-computedfields"
version = "0.2.5"
description = ""
authors = ["netzkolchose <j.breitbart@netzkolchose.de>"]
readme = "README.md"
packages = [{"include"= "computedfields"}]
license = "MIT"
url = "https://github.com/netzkolchose/django-computedfields"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
typing-extensions = "^4.9.0"
django-fast-update = "^0.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
